--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,11 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --primaryColor: #1a1a2ed3;
-    --secondary: #2ec4b5da;
-    --other-color: #f2ede096;
+    --primaryColor: #0a192f;
+    --secondary: #ffd700;
+    --other-color: #f1e4d1;
     --text-darkBg: #fff;
-    --bg: linear-gradient(160deg, #748491, #3c4142, #171717);
+    --bg: linear-gradient(160deg, #023859, #011c40, #02060e);
     --accent: #aa3bff;
     --accent-bg: rgba(170, 59, 255, 0.1);
     --accent-border: rgba(170, 59, 255, 0.5);
